--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -35,19 +36,20 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
-        tools:node="replace"
         tools:replace="android:allowBackup">
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
         <uses-library android:name="com.google.android.maps" />
 
+        <service android:name=".services.LocationServiceHtis" />
+
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
         <activity android:name=".activity.WFMS.activity.BaseActivity" />
         <activity
-            android:name=".activity.WFMS.activity.SplashActivityWFMS"
+            android:name=".activity.WFMS.activity.SplashNew"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
@@ -56,6 +58,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.WFMS.activity.PerformActivityNew" />
 
         <activity android:name=".activity.WFMS.activity.FilterActivity" />
         <activity android:name=".activity.WFMS.activity.HelpActivityWFMS" />
@@ -83,6 +86,7 @@
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="AIzaSyCz_YUl1l13n1V6yS_H8ShLlTu4nB__2rs" />
+<!--        android:launchMode="singleInstance"-->
 
         <activity
             android:name=".activity.WFMS.activity.MainActivityNavigation"
@@ -101,6 +105,7 @@
             android:enabled="true"
             android:exported="false"
             android:permission="android.permission.BIND_JOB_SERVICE"
+            android:process=":service"
             android:stopWithTask="false" />
         <service
             android:name=".activity.WFMS.service.PreOreoLocationService"
