18-01-2021 send to shobin

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        tools:ignore="ScopedStorage" />
     <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -34,6 +35,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
+        android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:allowBackup">
@@ -43,7 +45,8 @@
         <uses-library android:name="com.google.android.maps" />
 
         <service android:name=".services.LocationServiceHtis" />
-        <service android:name=".activity.WFMS.service.JobServiceToUplodData"
+        <service
+            android:name=".activity.WFMS.service.JobServiceToUplodData"
             android:permission="android.permission.BIND_JOB_SERVICE">
 
         </service>
@@ -78,6 +81,7 @@
         <activity android:name=".activity.WFMS.claims.AddClaimActivityWFMS" />
         <activity android:name=".activity.WFMS.activity.TeamMapActivityWFMS" />
         <activity android:name=".activity.WFMS.activity.CameraActivity" />
+        <activity android:name=".activity.WFMS.marketing.activity.MarketingActivity" />
 
         <service android:name=".activity.WFMS.service.GPSTrackerWFMS" />
 
@@ -106,11 +110,9 @@
 
         <service
             android:name=".activity.WFMS.service.OreoLocationService"
-            android:enabled="true"
-            android:exported="false"
+
             android:permission="android.permission.BIND_JOB_SERVICE"
-            android:process=":service"
-            android:stopWithTask="false" />
+         />
         <service
             android:name=".activity.WFMS.service.PreOreoLocationService"
             android:enabled="true"
@@ -130,6 +132,8 @@
 
         <activity android:name=".activity.WFMS.advance_claims.activity.AdvanceStatusActivityWFMS" />
 
+        <receiver android:name=".activity.WFMS.receiver.CheckPunchStatusReceiver" />
+        <receiver android:name=".activity.WFMS.receiver.PunchStatusCheckout"/>
         <receiver
             android:name=".activity.WFMS.receiver.AlarmReceiverForPunchOut"
             android:enabled="true"
@@ -151,9 +155,7 @@
             </intent-filter>
         </receiver>
 
-        <service
-            android:name=".activity.WFMS.service.UploadDataServerService"
-          ></service>
+        <service android:name=".activity.WFMS.service.UploadDataServerService"></service>
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.htisinhouse.provider"
