--- a/app/build.gradle
+++ b/app/build.gradle
@@ -158,6 +158,8 @@ dependencies {
     implementation('io.socket:socket.io-client:2.0.0') {
         exclude group: 'org.json', module: 'json'
     }
+    implementation 'com.akexorcist:localization:1.2.6'
+
 //    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.5'
 //    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
 }
